...
    android:id="@+id/fragment_menu"
    android:background="@color/design_default_color_background">



    <Button
        android:id="@+id/viewCartButton"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/green"
        android:text="@string/view_cart"
        android:padding="0dp"
        android:elevation="1dp"
...
                android:layout_marginTop="16dp"
                android:text="Menu"
                android:textSize="30sp" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/menu_recycler"
                android:name="com.cpen321.modernwaiter.ui.menu.MenuItemFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layoutManager="LinearLayoutManager"
                android:isScrollContainer="false"
...
