...

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/exitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/circle"
            android:backgroundTint="@android:color/darker_gray"
...

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/incrementButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="2dp"
                    android:background="@drawable/ic_baseline_add_24"
                    android:backgroundTint="@color/material_on_surface_emphasis_medium"
                    app:backgroundTint="@null"
...
