...
        android:id="@+id/navigation_menu"
        android:name="com.cpen321.modernwaiter.customer.ui.menu.MenuFragment"
        android:label="@string/title_menu"
        tools:layout="@layout/fragment_menu" >
        <action
            android:id="@+id/action_navigation_menu_to_navigation_order"
            app:destination="@id/navigation_order" />

        <action
            android:id="@+id/action_navigation_refresh_menu"
            app:destination="@id/navigation_menu" />
    </fragment>

...
    </fragment>

    <fragment
        android:id="@+id/navigation_bill"
        android:name="com.cpen321.modernwaiter.customer.ui.bill.BillFragment"
        android:label="Bill"
        tools:layout="@layout/fragment_bill" >
        <action
            android:id="@+id/action_navigation_payment_to_navigation_stripe"
            app:destination="@id/navigation_stripe" />

        <action
            android:id="@+id/action_navigation_payment_to_per_item_payment"
...
